# eoread

./: Makefile  README.md  pyproject.toml
auxdata/msi/: S2-SRF_COPE-GSEG-EOPG-TN-15-0007_3.0_S2A.csv
eoread/: __init__.py  ancillary_nasa.py  autodetect.py  binned.py  cache.py  common.py  dask.py  dask_profiler.py  datetime_utils.py  download.py  download_S2.py  download_eumdac.py  download_legacy.py  eo.py  era5.py  fileutils.py  goesng.py  gsw.py  hdf4.py  interpolate.py  keyring.py  landsat8_oli.py  landsat9_oli.py  level1_msi.py  level1_olci.py  make_L1C.py  meris.py  mirror.py  misc.py  msi.py  naming.py  nasa.py  olci.py  process.py  raster.py  sample_products.py  sgli.py  srtm.py  static.py  uncompress.py  (+1 more)
eoread/ancillary/: README.md  SeaIce.py  __init__.py  baseprovider.py  cams.csv  cams.py  cams_models.py  cdsapi_parser.py  era5.csv  era5.py  era5_models.py  merra2.py  merra2_models.py  merra2parser.py  nomenclature.csv  nomenclature.py  seaice.py
eoread/auxdata/meris/: README
eoread/download/: __init__.py  download.py  download_base.py  download_copernicus_dataspace.py  download_eumdac.py  download_landsat.py  download_modis.py  download_nextcloud.py  download_sentinel.py
eoread/reader/: __init__.py  dem.py  ecostress.py  goesng.py  gsw.py  hdf4.py  landsat8_oli.py  landsat9_oli.py  make_L1C.py  meris.py  modis.py  msi.py  olci.py  sgli.py  valid_SRTM3_tiles.txt  venus.py
eoread/utils/: binned.py  cache.py  config.py  datetime_utils.py  fileutils.py  graphics.py  hdf4.py  interpolate.py  naming.py  pytest_utils.py  save.py  save_aux.py  srtm.py  static.py  tools.py  uncompress.py  xrtags.py
tests/: conftest.py  dummy_products.py  generic.py  products.py  test_all_sensors.py  test_ancillary.py  test_binned.py  test_blockwise.py  test_cache.py  test_common.py  test_dem.py  test_download.py  test_ecostress.py  test_eoread.py  test_era5.py  test_eumdac.py  test_fileutils.py  test_goesng.py  test_gsw.py  test_landsat8.py  test_landsat9.py  test_meris.py  test_mirror.py  test_misc.py  test_modis.py  test_msi.py  test_nasa.py  test_olci.py  test_process.py  test_products.py  test_raster.py  test_save.py  test_sgli.py  test_uncompress.py  test_venus.py
tests/ancillary/: __init__.py  test_SeaIce.py  test_cams.py  test_cdsapi_parser.py  test_era5.py  test_merra2.py  test_merra2parser.py  test_nomenclature.py  test_seaice.py
tests/ancillary/inputs/: interpolated_sea_ice.nc
tests/download/: test_download_eumdac.py  test_download_landsat.py  test_download_modis.py  test_download_sentinel.py
(+6 files in other folders)
