[tool.poetry]
name = "eoread"
version = "0.2-dev"
description = "Modular and flexible implementation of satellite data input/output relying on xarray."
authors = ["HYGEOS Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rasterio = "1.3.10"
dask = "2024.8.0"
numpy = "1.26"
matplotlib = "3.9.1"
shapely = "2.0.5"
scipy = "1.13.0"
netcdf4 = "1.6.5"
pyproj = "3.6.1"
lxml = "5.2.2"
h5netcdf = "1.3.0"
xarray = "2024.6.0"
pyepr = "1.1.5"
core = {git = "ssh://git@github.com/hygeos/core.git"}
sandd = {git = "ssh://git@github.com/hygeos/sandd.git"}

[tool.poetry.dev-dependencies]
pytest = ">=6.0.1"
pytest-html = ">=2.1.1"
pytest-xdist = ">=2.1.0"

[tool.poetry.group.dev.dependencies]
h5netcdf = "^1.3.0"
pyhdf = "^0.11.4"
h5py = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
