[tool.poetry]
name = "eoread"
version = "0.2-dev"
license = "Apache 2.0"
description = "Modular implementation of satellite data input/output relying on xarray."
authors = ["HYGEOS Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
rasterio = "*"
dask = "*"
numpy = "<2"
matplotlib = "*"
shapely = "*"
scipy = "*"
netcdf4 = "*"
pyproj = "*"
lxml = "*"
h5netcdf = "*"
xarray = "*"
pyepr = "*"
core = {git = "ssh://git@github.com/hygeos/core.git"}
sandd = {git = "ssh://git@github.com/hygeos/sandd.git", optional=true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"

[tool.poetry.group.dev.dependencies]
h5netcdf = "*"
pyhdf = "*"
h5py = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
